--- a/lec/colab/python_tut_colab.ipynb
+++ b/lec/colab/python_tut_colab.ipynb
@@ -35,7 +35,8 @@
     "## コードセルの実行方法\n",
     "\n",
     "* 該当セルをクリックして選択すると，セルの左側に実行ボタン（再生ボタンみたいな）が現れる．それをクリックする．\n",
-    "* または，選択中に，Ctrlキーを押しながらEnterキーを押す．（ブラウザによっては，Shiftキーを押しながらEnterキーも受け付ける）\n",
+    "* または，選択中にキーボードから《Ctrl-Enter》（Ctrlキーを押しながらEnterキーを押す）．\n",
+    "    * ブラウザによっては《Shift-Enter》も受け付けるみたい\n",
     "\n",
     "## コードセルの追加方法\n",
     "\n",
@@ -53,16 +54,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 四則演算"
+    "## 四則演算\n",
+    "\n",
+    "* 次のコードセルを実行せよ．（実行ボタンをクリックするか，《Ctrl-Enter》）"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "1+2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 次のコードを，直下のコードセルに入力して実行せよ．（答：`2.5`）\n",
+    "\n",
+    "```python\n",
+    "1+2*3/4\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+2*3/4"
    ]
   },
   {
