--- a/lec/colab/python_tut_colab.ipynb
+++ b/lec/colab/python_tut_colab.ipynb
@@ -40,7 +40,11 @@
     "\n",
     "## コードセルの追加方法\n",
     "\n",
-    "* 左上メニューの「挿入」→「コードセル」で追加できる．"
+    "* 左上メニューの「挿入」→「コードセル」で追加できる．\n",
+    "\n",
+    "## コメントアウト\n",
+    "\n",
+    "* コードセルに # 記号を書くと，そこから行末までを python は無視します．コードセル内のメモ書きに使います．"
    ]
   },
   {
@@ -54,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 四則演算\n",
+    "## 四則演算・べき乗\n",
     "\n",
     "* 次のコードセルを実行せよ．（実行ボタンをクリックするか，《Ctrl-Enter》）"
    ]
@@ -111,10 +115,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 次のコードを，直下のコードセルに入力して実行せよ．（答：2の3乗＝`8`）\n",
+    "\n",
+    "```python\n",
+    "2**3\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2**3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ベクトル・行列"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* まずは，ベクトル演算用のライブラリ（拡張機能）を，インポートします（読み込みます）．次のコードセルを実行してください．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import numpy as np #ベクトル演算ライブラリ numpy を，短縮形 np でインポートする．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 次のコードを実行し，数ベクトルを作れ．\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
